# --------------------------------------------------------------------------------------------------------------
#
# Copyright 2020-2026 Robert Bosch GmbH
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# --------------------------------------------------------------------------------------------------------------
#
# TOML file used for component installation
#
# Version 0.1.0 / 11.03.2026
#
# --------------------------------------------------------------------------------------------------------------
#
# According to the TOML specification:
# * Names in square brackets (e.g. [build-system]) are called 'table'.
# * Names located to the left of the equal sign (e.g. 'requires') are called 'key'.
#
# --------------------------------------------------------------------------------------------------------------
# [build-system]
# Specifies the build backend (e.g. setuptools) and required build dependencies.
# Status: Required
#
[build-system]
# 'requires' specifies the dependencies necessary for the build process (meaning the conversion of source code into an installable distribution)
requires      = ["setuptools>=80.9.0", "wheel", "build", "docutils>=0.22.4", "robotframework>=6.1", "colorama",
                 "GenPackageDoc", "PythonExtensionsCollection"] # need to be strengthened later to: "GenPackageDoc>=0.43.0"
build-backend = "build_backend"
backend-path  = ["."] # the repository main folder

# --------------------------------------------------------------------------------------------------------------
# [project]
# Core metadata including name, version, authors, and package dependencies.
# Status: Required
#
[project]
name            = "DevAtServ" # the official PyPi package name (must be unique worldwide), not necessarily the import name
description     = "Documentation of Device Automation Services"
version         = "0.36.0"
# corresponding version date under: [tool.DevAtServ]
requires-python = ">=3.11"
authors         = [{name = "Thomas Pollerspöck", email = "Thomas.Pollerspoeck@de.bosch.com"}]
readme          = "README.rst"
license         = "Apache-2.0"
keywords        = ["device", "automation", "test", "documentation"]
# 'classifiers' need to be chosen according to: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]
# 'dependencies' defines the dependencies required to run the application or library (runtime dependencies)
dependencies = [
    "robotframework>=6.1",
    "colorama",
    "GenPackageDoc",
    "PythonExtensionsCollection"
]

# --------------------------------------------------------------------------------------------------------------
# [project.optional-dependencies]
# Defines optional dependency groups (extras), e.g., for testing or documentation.
# Status: Optional
#
[project.optional-dependencies]
dev = [
    "pytest>=6.0",          # !to be verified !
    "pytest-cov>=3.0",      # !to be verified !
]

docs = [
    "docutils>=0.22.4",
]

# --------------------------------------------------------------------------------------------------------------
# [project.urls]
# External project links such as homepage, source code repository, or documentation.
# Status: Optional
#
[project.urls]
Homepage      = "https://github.com/test-fullautomation/DevAtServ-documentation"
Documentation = "https://github.com/test-fullautomation/DevAtServ-documentation/tree/develop/DevAtServ"
Readme        = "https://github.com/test-fullautomation/DevAtServ-documentation/blob/develop/README.rst"
Repository    = "https://github.com/test-fullautomation/DevAtServ-documentation"
Issues        = "https://github.com/test-fullautomation/DevAtServ-documentation/issues"

# --------------------------------------------------------------------------------------------------------------
# [tool.setuptools]
# Specific settings for the setuptools backend, e.g., package discovery.
# Defines the main package to be installed.
# Status: Optional
#
[tool.setuptools]
packages = [
    "DevAtServ"
]

# [tool.setuptools.package-data]
# Specifies additional non-Python files (e.g., data) to be included in the package.
# Assigns additional installation files to the main package (without making subfolders a separate sub-package).
# Status: Optional
#
[tool.setuptools.package-data]
"DevAtServ" = ["*.pdf", "*.rst", "*.html"]

[tool.DevAtServ]
released = "11.03.2026"
# corresponding version number under: [project]

